googlesql/tools/execute_query/testdata/execute_query_web_handler.test
[mode=analyze execute]

# Simple query
select 1;
--
query:# Simple query
select 1;

mode_execute
mode_analyze
sql_mode_query
target_syntax_mode_standard
table:<table>
  <thead>
    <tr>
        <th>#&zwnj;</th>
        <th>&zwnj;</th>
    </tr>
  </thead>
  <tbody>
      <tr>
          <td>1</td>
          <td>1</td>
      </tr>
  </tbody>
</table>

result_analyzed:<span class="ast-node">QueryStmt</span>
├─output_column_list=
│ └─$query.<span class="ast-col dollar_col1_1">$col1#1</span> AS `$col1` [INT64]
└─query=
  └─<span class="ast-node">ProjectScan</span>
    ├─column_list=[$query.<span class="ast-col dollar_col1_1">$col1#1</span>]
    ├─expr_list=
    │ └─<span class="ast-col-src"><span class="ast-col dollar_col1_1">$col1#1</span></span> := Literal(type=INT64, value=1)
    └─input_scan=
      └─<span class="ast-node">SingleRowScan</span>
\
==

[mode=unanalyze]
[target_syntax_mode=standard]
WITH mytable AS (
  SELECT 1 as Key, 2 as Value
)
SELECT * from mytable;
--
query:WITH mytable AS (
  SELECT 1 as Key, 2 as Value
)
SELECT * from mytable;

mode_unanalyze
sql_mode_query
target_syntax_mode_standard
result_unanalyzed:WITH mytable AS (SELECT 1 AS a_1, 2 AS a_2)
SELECT withrefscan_3.a_1 AS Key, withrefscan_3.a_2 AS Value
FROM mytable AS withrefscan_3
\
==

[mode=unanalyze]
[target_syntax_mode=pipe]
WITH mytable AS (
  SELECT 1 as Key, 2 as Value
)
SELECT * from mytable
GROUP BY ALL;
--
query:WITH mytable AS (
  SELECT 1 as Key, 2 as Value
)
SELECT * from mytable
GROUP BY ALL;

mode_unanalyze
sql_mode_query
target_syntax_mode_pipe
result_unanalyzed:WITH mytable AS (SELECT 1 AS a_1, 2 AS a_2) FROM mytable AS withrefscan_3
|&gt; EXTEND withrefscan_3.a_1 AS a_4, withrefscan_3.a_2 AS a_5
|&gt; AGGREGATE GROUP BY a_4, a_5
|&gt; AS aggregatescan_6
|&gt; SELECT aggregatescan_6.a_4 AS Key, aggregatescan_6.a_5 AS Value
\
==

# Parse a simple procedural script
[mode=parse]
[sql_mode=script]
DECLARE x INT64 DEFAULT 100;
--
query:DECLARE x INT64 DEFAULT 100;

mode_parse
sql_mode_script
target_syntax_mode_standard
result_parsed:&lt;span class=&quot;ast-range&quot;&gt;Script [0-28]&lt;&#x2F;span&gt;
  &lt;span class=&quot;ast-range&quot;&gt;StatementList [0-28]&lt;&#x2F;span&gt;
    &lt;span class=&quot;ast-range&quot;&gt;VariableDeclaration [0-27]&lt;&#x2F;span&gt;
      &lt;span class=&quot;ast-range&quot;&gt;IdentifierList [8-9]&lt;&#x2F;span&gt;
        &lt;span class=&quot;ast-range&quot;&gt;Identifier(x) [8-9]&lt;&#x2F;span&gt;
      &lt;span class=&quot;ast-range&quot;&gt;SimpleType [10-15]&lt;&#x2F;span&gt;
        &lt;span class=&quot;ast-range&quot;&gt;PathExpression [10-15]&lt;&#x2F;span&gt;
          &lt;span class=&quot;ast-range&quot;&gt;Identifier(INT64) [10-15]&lt;&#x2F;span&gt;
      &lt;span class=&quot;ast-range&quot;&gt;IntLiteral(100) [24-27]&lt;&#x2F;span&gt;

result_formatted_sql:<div class="formatted-sql"><div class="ast ast-Script"><div class="ast ast-StatementList"><div class="ast ast-VariableDeclaration">DECLARE <div class="ast ast-IdentifierList"><div class="ast ast-Identifier">x</div></div> <div class="ast ast-SimpleType"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">INT64</div></div></div> DEFAULT <div class="ast ast-IntLiteral">100</div></div>;</div></div></div>
result_formatted_sql_boxed:<div class="formatted-sql boxed"><div class="ast ast-Script"><div class="ast ast-StatementList"><div class="ast ast-VariableDeclaration">DECLARE <div class="ast ast-IdentifierList"><div class="ast ast-Identifier">x</div></div> <div class="ast ast-SimpleType"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">INT64</div></div></div> DEFAULT <div class="ast ast-IntLiteral">100</div></div>;</div></div></div>
==

# Parse a procedural script loop
[mode=parse]
[sql_mode=script]
DECLARE x INT64 DEFAULT 0;
WHILE x < 3
DO
  SELECT x as num, x * x as num_square;
  SET x = x + 1;
END WHILE;
--
query:DECLARE x INT64 DEFAULT 0;
WHILE x &lt; 3
DO
  SELECT x as num, x * x as num_square;
  SET x = x + 1;
END WHILE;

mode_parse
sql_mode_script
target_syntax_mode_standard
result_parsed:&lt;span class=&quot;ast-range&quot;&gt;Script [0-109]&lt;&#x2F;span&gt;
  &lt;span class=&quot;ast-range&quot;&gt;StatementList [0-109]&lt;&#x2F;span&gt;
    &lt;span class=&quot;ast-range&quot;&gt;VariableDeclaration [0-25]&lt;&#x2F;span&gt;
      &lt;span class=&quot;ast-range&quot;&gt;IdentifierList [8-9]&lt;&#x2F;span&gt;
        &lt;span class=&quot;ast-range&quot;&gt;Identifier(x) [8-9]&lt;&#x2F;span&gt;
      &lt;span class=&quot;ast-range&quot;&gt;SimpleType [10-15]&lt;&#x2F;span&gt;
        &lt;span class=&quot;ast-range&quot;&gt;PathExpression [10-15]&lt;&#x2F;span&gt;
          &lt;span class=&quot;ast-range&quot;&gt;Identifier(INT64) [10-15]&lt;&#x2F;span&gt;
      &lt;span class=&quot;ast-range&quot;&gt;IntLiteral(0) [24-25]&lt;&#x2F;span&gt;
    &lt;span class=&quot;ast-range&quot;&gt;WhileStatement [27-108]&lt;&#x2F;span&gt;
      &lt;span class=&quot;ast-range&quot;&gt;BinaryExpression(&amp;lt;) [33-38]&lt;&#x2F;span&gt;
        &lt;span class=&quot;ast-range&quot;&gt;PathExpression [33-34]&lt;&#x2F;span&gt;
          &lt;span class=&quot;ast-range&quot;&gt;Identifier(x) [33-34]&lt;&#x2F;span&gt;
        &lt;span class=&quot;ast-range&quot;&gt;IntLiteral(3) [37-38]&lt;&#x2F;span&gt;
      &lt;span class=&quot;ast-range&quot;&gt;StatementList [44-98]&lt;&#x2F;span&gt;
        &lt;span class=&quot;ast-range&quot;&gt;QueryStatement [44-80]&lt;&#x2F;span&gt;
          &lt;span class=&quot;ast-range&quot;&gt;Query [44-80]&lt;&#x2F;span&gt;
            &lt;span class=&quot;ast-range&quot;&gt;Select [44-80]&lt;&#x2F;span&gt;
              &lt;span class=&quot;ast-range&quot;&gt;SelectList [51-80]&lt;&#x2F;span&gt;
                &lt;span class=&quot;ast-range&quot;&gt;SelectColumn [51-59]&lt;&#x2F;span&gt;
                  &lt;span class=&quot;ast-range&quot;&gt;PathExpression [51-52]&lt;&#x2F;span&gt;
                    &lt;span class=&quot;ast-range&quot;&gt;Identifier(x) [51-52]&lt;&#x2F;span&gt;
                  &lt;span class=&quot;ast-range&quot;&gt;Alias [53-59]&lt;&#x2F;span&gt;
                    &lt;span class=&quot;ast-range&quot;&gt;Identifier(num) [56-59]&lt;&#x2F;span&gt;
                &lt;span class=&quot;ast-range&quot;&gt;SelectColumn [61-80]&lt;&#x2F;span&gt;
                  &lt;span class=&quot;ast-range&quot;&gt;BinaryExpression(*) [61-66]&lt;&#x2F;span&gt;
                    &lt;span class=&quot;ast-range&quot;&gt;PathExpression [61-62]&lt;&#x2F;span&gt;
                      &lt;span class=&quot;ast-range&quot;&gt;Identifier(x) [61-62]&lt;&#x2F;span&gt;
                    &lt;span class=&quot;ast-range&quot;&gt;PathExpression [65-66]&lt;&#x2F;span&gt;
                      &lt;span class=&quot;ast-range&quot;&gt;Identifier(x) [65-66]&lt;&#x2F;span&gt;
                  &lt;span class=&quot;ast-range&quot;&gt;Alias [67-80]&lt;&#x2F;span&gt;
                    &lt;span class=&quot;ast-range&quot;&gt;Identifier(num_square) [70-80]&lt;&#x2F;span&gt;
        &lt;span class=&quot;ast-range&quot;&gt;SingleAssignment [84-97]&lt;&#x2F;span&gt;
          &lt;span class=&quot;ast-range&quot;&gt;Identifier(x) [88-89]&lt;&#x2F;span&gt;
          &lt;span class=&quot;ast-range&quot;&gt;BinaryExpression(+) [92-97]&lt;&#x2F;span&gt;
            &lt;span class=&quot;ast-range&quot;&gt;PathExpression [92-93]&lt;&#x2F;span&gt;
              &lt;span class=&quot;ast-range&quot;&gt;Identifier(x) [92-93]&lt;&#x2F;span&gt;
            &lt;span class=&quot;ast-range&quot;&gt;IntLiteral(1) [96-97]&lt;&#x2F;span&gt;

result_formatted_sql:<div class="formatted-sql"><div class="ast ast-Script"><div class="ast ast-StatementList"><div class="ast ast-VariableDeclaration">DECLARE <div class="ast ast-IdentifierList"><div class="ast ast-Identifier">x</div></div> <div class="ast ast-SimpleType"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">INT64</div></div></div> DEFAULT <div class="ast ast-IntLiteral">0</div></div>;
<div class="ast ast-WhileStatement">WHILE <div class="ast ast-BinaryExpression"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div> &lt; <div class="ast ast-IntLiteral">3</div></div>
DO
  <div class="ast ast-StatementList"><div class="ast ast-QueryStatement"><div class="ast ast-Query"><div class="ast ast-Select">SELECT <div class="ast ast-SelectList"><div class="ast ast-SelectColumn"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div> <div class="ast ast-Alias">as <div class="ast ast-Identifier">num</div></div></div>, <div class="ast ast-SelectColumn"><div class="ast ast-BinaryExpression"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div> * <div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div></div> <div class="ast ast-Alias">as <div class="ast ast-Identifier">num_square</div></div></div></div></div></div></div>;
  <div class="ast ast-SingleAssignment">SET <div class="ast ast-Identifier">x</div> = <div class="ast ast-BinaryExpression"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div> + <div class="ast ast-IntLiteral">1</div></div></div>;</div>
END WHILE</div>;</div></div></div>
result_formatted_sql_boxed:<div class="formatted-sql boxed"><div class="ast ast-Script"><div class="ast ast-StatementList"><div class="ast ast-VariableDeclaration">DECLARE <div class="ast ast-IdentifierList"><div class="ast ast-Identifier">x</div></div> <div class="ast ast-SimpleType"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">INT64</div></div></div> DEFAULT <div class="ast ast-IntLiteral">0</div></div>;
<div class="ast ast-WhileStatement">WHILE
  <div class="ast ast-BinaryExpression"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div> &lt; <div class="ast ast-IntLiteral">3</div></div> DO <div class="ast ast-StatementList"><div class="ast ast-QueryStatement"><div class="ast ast-Query"><div class="ast ast-Select">SELECT <div class="ast ast-SelectList"><div class="ast ast-SelectColumn"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div> <div class="ast ast-Alias">as <div class="ast ast-Identifier">num</div></div>,</div> <div class="ast ast-SelectColumn"><div class="ast ast-BinaryExpression"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div> * <div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div></div> <div class="ast ast-Alias">as <div class="ast ast-Identifier">num_square</div></div></div></div></div></div></div>;
  <div class="ast ast-SingleAssignment">SET <div class="ast ast-Identifier">x</div> = <div class="ast ast-BinaryExpression"><div class="ast ast-PathExpression"><div class="ast ast-Identifier">x</div></div> + <div class="ast ast-IntLiteral">1</div></div></div>;</div> END WHILE</div>;</div></div></div>
==

# Execute a procedural script loop
[mode=execute analyze]
[sql_mode=script]
DECLARE x INT64 DEFAULT 0;
WHILE x < 3
DO
  SELECT x as num, x * x as num_square;
  SET x = x + 1;
END WHILE;
--
query:DECLARE x INT64 DEFAULT 0;
WHILE x &lt; 3
DO
  SELECT x as num, x * x as num_square;
  SET x = x + 1;
END WHILE;

mode_execute
mode_analyze
sql_mode_script
target_syntax_mode_standard
statement_text:SELECT x as num, x * x as num_square
table:<table>
  <thead>
    <tr>
        <th>#&zwnj;</th>
        <th>num&zwnj;</th>
        <th>num_square&zwnj;</th>
    </tr>
  </thead>
  <tbody>
      <tr>
          <td>1</td>
          <td>0</td>
          <td>0</td>
      </tr>
  </tbody>
</table>

result_analyzed:<span class="ast-node">QueryStmt</span>
├─output_column_list=
│ ├─$query.<span class="ast-col num_1">num#1</span> AS num [INT64]
│ └─$query.<span class="ast-col num_square_2">num_square#2</span> AS num_square [INT64]
└─query=
  └─<span class="ast-node">ProjectScan</span>
    ├─column_list=$query.[<span class="ast-col num_1">num#1</span>, <span class="ast-col num_square_2">num_square#2</span>]
    ├─expr_list=
    │ ├─<span class="ast-col-src"><span class="ast-col num_1">num#1</span></span> := Constant(x, type=INT64, value=0)
    │ └─<span class="ast-col-src"><span class="ast-col num_square_2">num_square#2</span></span> :=
    │   └─<span class="ast-node">FunctionCall</span>(GoogleSQL:$multiply(INT64, INT64) -&gt; INT64)
    │     ├─<span class="ast-node">Constant</span>(x, type=INT64, value=0)
    │     └─<span class="ast-node">Constant</span>(x, type=INT64, value=0)
    └─input_scan=
      └─<span class="ast-node">SingleRowScan</span>

statement_text:SELECT x as num, x * x as num_square
table:<table>
  <thead>
    <tr>
        <th>#&zwnj;</th>
        <th>num&zwnj;</th>
        <th>num_square&zwnj;</th>
    </tr>
  </thead>
  <tbody>
      <tr>
          <td>1</td>
          <td>1</td>
          <td>1</td>
      </tr>
  </tbody>
</table>

result_analyzed:<span class="ast-node">QueryStmt</span>
├─output_column_list=
│ ├─$query.<span class="ast-col num_1">num#1</span> AS num [INT64]
│ └─$query.<span class="ast-col num_square_2">num_square#2</span> AS num_square [INT64]
└─query=
  └─<span class="ast-node">ProjectScan</span>
    ├─column_list=$query.[<span class="ast-col num_1">num#1</span>, <span class="ast-col num_square_2">num_square#2</span>]
    ├─expr_list=
    │ ├─<span class="ast-col-src"><span class="ast-col num_1">num#1</span></span> := Constant(x, type=INT64, value=1)
    │ └─<span class="ast-col-src"><span class="ast-col num_square_2">num_square#2</span></span> :=
    │   └─<span class="ast-node">FunctionCall</span>(GoogleSQL:$multiply(INT64, INT64) -&gt; INT64)
    │     ├─<span class="ast-node">Constant</span>(x, type=INT64, value=1)
    │     └─<span class="ast-node">Constant</span>(x, type=INT64, value=1)
    └─input_scan=
      └─<span class="ast-node">SingleRowScan</span>

statement_text:SELECT x as num, x * x as num_square
table:<table>
  <thead>
    <tr>
        <th>#&zwnj;</th>
        <th>num&zwnj;</th>
        <th>num_square&zwnj;</th>
    </tr>
  </thead>
  <tbody>
      <tr>
          <td>1</td>
          <td>2</td>
          <td>4</td>
      </tr>
  </tbody>
</table>

result_analyzed:<span class="ast-node">QueryStmt</span>
├─output_column_list=
│ ├─$query.<span class="ast-col num_1">num#1</span> AS num [INT64]
│ └─$query.<span class="ast-col num_square_2">num_square#2</span> AS num_square [INT64]
└─query=
  └─<span class="ast-node">ProjectScan</span>
    ├─column_list=$query.[<span class="ast-col num_1">num#1</span>, <span class="ast-col num_square_2">num_square#2</span>]
    ├─expr_list=
    │ ├─<span class="ast-col-src"><span class="ast-col num_1">num#1</span></span> := Constant(x, type=INT64, value=2)
    │ └─<span class="ast-col-src"><span class="ast-col num_square_2">num_square#2</span></span> :=
    │   └─<span class="ast-node">FunctionCall</span>(GoogleSQL:$multiply(INT64, INT64) -&gt; INT64)
    │     ├─<span class="ast-node">Constant</span>(x, type=INT64, value=2)
    │     └─<span class="ast-node">Constant</span>(x, type=INT64, value=2)
    └─input_scan=
      └─<span class="ast-node">SingleRowScan</span>
\
==

# Execute a procedural script loop with error
[mode=execute]
[sql_mode=script]
SET x = x + 1;
--
query:SET x = x + 1;

mode_execute
sql_mode_script
target_syntax_mode_standard
error:Undeclared variable: x [at 1:5]
SET x = x + 1;
    ^
==

# UDF
[mode=execute]
[sql_mode=script]
CREATE FUNCTION sq(x INT64) returns INT64 as (x * x);
select sq(16);
--
query:CREATE FUNCTION sq(x INT64) returns INT64 as (x * x);
select sq(16);

mode_execute
sql_mode_script
target_syntax_mode_standard
table:<table>
  <thead>
    <tr>
        <th>#&zwnj;</th>
        <th>$col_1&zwnj;</th>
    </tr>
  </thead>
  <tbody>
      <tr>
          <td>1</td>
          <td>256</td>
      </tr>
  </tbody>
</table>
\
==

# TVF
[mode=analyze,execute]
[sql_mode=script]
[enabled_ast_rewrites=ALL]

CREATE TEMP TABLE FUNCTION mytvf() RETURNS TABLE<x INT64> AS (
  select 1 x union all select 2 x
);

select * from mytvf();
--
query:CREATE TEMP TABLE FUNCTION mytvf() RETURNS TABLE&lt;x INT64&gt; AS (
  select 1 x union all select 2 x
);

select * from mytvf();

mode_execute
sql_mode_script
target_syntax_mode_standard
table:<table>
  <thead>
    <tr>
        <th>#&zwnj;</th>
        <th>x&zwnj;</th>
    </tr>
  </thead>
  <tbody>
      <tr>
          <td>1</td>
          <td>1</td>
      </tr>
      <tr>
          <td>2</td>
          <td>2</td>
      </tr>
  </tbody>
</table>
\
==

# Test executed_multi with a mix of successful and failed results.
[enabled_language_features=DEV]
[enabled_ast_rewrites=ALL]
[mode=execute]
select 1
|> fork (
  |> select *
), (
  |> select error("this is an error")
)
--
query:select 1
|&gt; fork (
  |&gt; select *
), (
  |&gt; select error(&quot;this is an error&quot;)
)

mode_execute
sql_mode_query
target_syntax_mode_standard
table:<table>
  <thead>
    <tr>
        <th>#&zwnj;</th>
        <th>&zwnj;</th>
    </tr>
  </thead>
  <tbody>
      <tr>
          <td>1</td>
          <td>1</td>
      </tr>
  </tbody>
</table>

error:this is an error
==

# Test the <span> tags that get added in error messages containing these strings.
# Since those errors are only produced by bugs, we don't have a reliable way
# produce them in tests.  This is a hack to pass through through as literal
# strings.  We see the tags added where these strings are echoed in error
# messages (next to "error:"), but not when showing query text.
select r"""line with (validation failed here)""" is an error;
--
query:select r&quot;&quot;&quot;line with (validation failed here)&quot;&quot;&quot; is an error;

mode_execute
sql_mode_query
target_syntax_mode_standard
error:INVALID_ARGUMENT: Syntax error: Expected keyword FALSE or keyword NULL or keyword TRUE or keyword UNKNOWN but got identifier &quot;an&quot; [at 1:53]
<span class="error-highlight">select r&quot;&quot;&quot;line with (validation failed here)&quot;&quot;&quot; is an error;</span>
                                                    ^
==

# Same as above with another highlighted string.
select r"""line with (*** This node has unaccessed field ***)""" is an error;
--
query:select r&quot;&quot;&quot;line with (*** This node has unaccessed field ***)&quot;&quot;&quot; is an error;

mode_execute
sql_mode_query
target_syntax_mode_standard
error:INVALID_ARGUMENT: Syntax error: Expected keyword FALSE or keyword NULL or keyword TRUE or keyword UNKNOWN but got identifier &quot;an&quot; [at 1:69]
<span class="error-highlight">select r&quot;&quot;&quot;line with (*** This node has unaccessed field ***)&quot;&quot;&quot; is an error;</span>
                                                                    ^
==

# Same as above, without any highlighted string. But we can see the
# html <tags> get escaped.
select r"""html <tags> are escaped""" in an error;
--
query:select r&quot;&quot;&quot;html &lt;tags&gt; are escaped&quot;&quot;&quot; in an error;

mode_execute
sql_mode_query
target_syntax_mode_standard
error:INVALID_ARGUMENT: Syntax error: Unexpected identifier &quot;an&quot; [at 1:42]
select r&quot;&quot;&quot;html &lt;tags&gt; are escaped&quot;&quot;&quot; in an error;
                                         ^
==

# Same as above, showing that the <span> tags for ResolvedColumns get added
# in error messages too, so column highlighting will work.
select r"""column abc.def#12 and [ghi#13]""" in an error;
--
query:select r&quot;&quot;&quot;column abc.def#12 and [ghi#13]&quot;&quot;&quot; in an error;

mode_execute
sql_mode_query
target_syntax_mode_standard
error:INVALID_ARGUMENT: Syntax error: Unexpected identifier &quot;an&quot; [at 1:49]
select r&quot;&quot;&quot;column abc.<span class="ast-col def_12">def#12</span> and [<span class="ast-col ghi_13">ghi#13</span>]&quot;&quot;&quot; in an error;
                                                ^
